--- a/contact.html
+++ b/contact.html
@@ -44,41 +44,29 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link text-dark" href="#">News <span class="sr-only">(current)</span></a>
+                <a class="nav-link text-dark" href="../website-proposal/index.html">Home<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link text-dark" href="#">Partners <span class="sr-only">(current)</span></a>
+                <a class="nav-link text-dark" href="#">What is FESC?<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link text-dark" href="#">News<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark" href="#">Energy Industry</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                About
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="../website-proposal/advisory-board.html">Advisory Board</a>
-                  <a class="dropdown-item" href="#">Leadership and Oversight Board</a>
-                  <a class="dropdown-item" href="#">Faculty</a>
-                  <a class="dropdown-item" href="#">Universities</a>
-                  <a class="dropdown-item" href="#">Leadership Team</a>
-
-
-                </div>
-              </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="../website-proposal/contact.html">Contact</a>
+                <a class="nav-link text-dark" href="#">FESC Resources</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 More Information
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="../website-proposal/advisory-board.html">FAQ</a>
+                  <a class="dropdown-item" href="#">FAQ</a>
                   <a class="dropdown-item" href="#">Educational Programs</a>
-                  <a class="dropdown-item" href="#">Energy Jobs</a>
-                  <a class="dropdown-item" href="#">Research</a>
-                  
+                  <a class="dropdown-item" href="#">Community Outreach Programs</a>
+                  <a class="dropdown-item" href="#">Research Facilities</a>
                 </div>
               </li>
             </ul>
@@ -164,7 +152,7 @@
       </div>
     </main>
       
-    <footer class="page-footer font-small blue pt-4 mt-4">
+<footer class="page-footer font-small blue pt-4 mt-4">
 
     <!--Footer Links-->
     <div class="container-fluid text-center text-md-left">
@@ -172,8 +160,21 @@
 
             <!--First column-->
             <div class="col-md-6">
-                <h5 class="text-uppercase">More Information</h5>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
+                <h5 class="text-uppercase">Florida Energy Resources</h5>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="#">Facilities</a>
+                  </li>
+                  <li>
+                    <a href="#">Institutions</a>
+                  </li>
+                  <li>
+                    <a href="#">Universities</a>
+                  </li>
+                  <li>
+                    <a href="#">Careers</a>
+                  </li>
+                </ul>
             </div>
             <!--/.First column-->
 
@@ -182,16 +183,19 @@
                 <h5 class="text-uppercase">Links</h5>
                 <ul class="list-unstyled">
                     <li>
-                        <a href="#!">Link 1</a>
+                        <a href="../website-proposal/advisory-board.html">Advisory Board</a>
                     </li>
                     <li>
-                        <a href="#!">Link 2</a>
+                        <a href="#!">Leadership and Oversight Board</a>
                     </li>
                     <li>
-                        <a href="#!">Link 3</a>
+                        <a href="#!">Faculty</a>
                     </li>
                     <li>
-                        <a href="#!">Link 4</a>
+                        <a href="#!">Florida Universities</a>
+                    </li>
+                    <li>
+                        <a href="../website-proposal/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
