--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
       <h1>Contact</h1>
     </div>
    
-    
+    <!-- Contact Form -->
     <main>
      <div class="container contact-form col-lg-6">
       <form method="get">
