--- a/data.html
+++ b/data.html
@@ -66,7 +66,7 @@
                   <a class="dropdown-item" href="#">FAQ</a>
                   <a class="dropdown-item" href="#">Educational Programs</a>
                   <a class="dropdown-item" href="#">Community Outreach Programs</a>
-                  <a class="dropdown-item" href="#">Research Facilities</a>
+                  <a class="dropdown-item" href="../website-proposal/data.html">Research and Data</a>
                 </div>
               </li>
             </ul>
@@ -81,7 +81,7 @@
       </div>
     </header>
     <div class="d-flex justify-content-center">
-      <h1>Data</h1>
+      <h1>Research and Data</h1>
     </div>
    
     <div class="row d-flex justify-content-center mt-5">  
