--- a/data.html
+++ b/data.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="styles/new-styles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     
-    <title>Data</title>
+    <title>Research and Data</title>
     
   </head>
   <body>
