api calls google chart

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                       <a class="dropdown-item" href="#">FAQ</a>
                       <a class="dropdown-item" href="#">Educational Programs</a>
                       <a class="dropdown-item" href="#">Community Outreach Programs</a>
-                      <a class="dropdown-item" href="../website-proposal/data.html">Research and Data</a>
+                      <a class="dropdown-item" href="../website-proposal/research-and-data.html">Research and Data</a>
                     </div>
                   </li>
                 </ul>
